--- a/index.html
+++ b/index.html
@@ -348,11 +348,11 @@
       </div>
       <div>
         <div class="circle"></div>
-        Picked Up<br />Waiting
+        Picked Up<br />24.12.2024
       </div>
       <div>
         <div class="circle"></div>
-        Warehouse<br />Waiting
+        Warehouse<br />26.12.2024
       </div>
       <div>
         <div class="circle"></div>
@@ -403,7 +403,7 @@
         </div>
         <div class="details-item">
           <span>Warehouse Delivery:</span>
-          <span>Waiting</span>
+          <span>26.12.2024</span>
         </div>
         <div class="details-item">
           <span>Container:</span>
